<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".ui.fragment.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/xxl_padding"
            android:layout_marginVertical="@dimen/xxl_padding"
            android:background="@drawable/edittext_input_white"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingVertical="@dimen/xs_padding"
            android:paddingStart="@dimen/l_padding"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,RtlSymmetry" />

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/xxl_padding"
            android:layout_marginVertical="@dimen/xxl_padding"
            android:autofillHints="@string/email"
            android:background="@drawable/edittext_input_white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingVertical="@dimen/xs_padding"
            android:paddingStart="@dimen/l_padding"
            app:layout_constraintTop_toBottomOf="@id/username_edittext"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/phone_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/xxl_padding"
            android:layout_marginVertical="@dimen/xxl_padding"
            android:autofillHints="@string/phone"
            android:background="@drawable/edittext_input_white"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingVertical="@dimen/xs_padding"
            android:paddingStart="@dimen/l_padding"
            app:layout_constraintTop_toBottomOf="@id/email_edittext"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/nickname_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/xxl_padding"
            android:layout_marginVertical="@dimen/xxl_padding"
            android:background="@drawable/edittext_input_white"
            android:hint="@string/nickname"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingVertical="@dimen/xs_padding"
            android:paddingStart="@dimen/l_padding"
            app:layout_constraintTop_toBottomOf="@id/phone_edittext"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/xxl_padding"
            android:layout_marginVertical="@dimen/xxl_padding"
            android:autofillHints="password"
            android:background="@drawable/edittext_input_white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingVertical="@dimen/xs_padding"
            android:paddingStart="@dimen/l_padding"
            app:layout_constraintEnd_toEndOf="@id/email_edittext"
            app:layout_constraintStart_toStartOf="@id/email_edittext"
            app:layout_constraintTop_toBottomOf="@id/nickname_edittext"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxl_padding"
            android:background="@drawable/button_orange_rounded"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/email_edittext"
            app:layout_constraintStart_toStartOf="@id/email_edittext"
            app:layout_constraintTop_toBottomOf="@id/password_edittext"
            app:layout_constraintBottom_toTopOf="@id/sign_up_imageview" />

        <ImageView
            android:id="@+id/sign_up_imageview"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/sign_up"
            android:src="@drawable/signup_icon"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
