<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/m_padding"
    android:layout_marginVertical="@dimen/m_padding"
    app:cardCornerRadius="8dp"
    android:layout_marginBottom="@dimen/m_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/s_padding">

        <TextView
            android:id="@+id/textview_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m_padding"
            android:text="Product 1"
            android:textColor="@color/black"
            android:textSize="@dimen/sub_title_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_exp_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m_padding"
            android:layout_marginTop="@dimen/s_padding"
            android:drawablePadding="@dimen/text_space"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/sub_title_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_food_name"/>

        <TextView
            android:id="@+id/textview_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/m_padding"
            android:ellipsize="end"
            android:maxLines="4"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_exp_date" />

        <TextView
            android:id="@+id/textview_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/m_padding"
            android:ellipsize="end"
            android:maxLines="4"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_description" />

        <!--        <Button-->
        <!--            android:id="@+id/button_see_more"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:background="@android:color/transparent"-->
        <!--            android:text="@string/see_more"-->
        <!--            android:textAlignment="viewEnd"-->
        <!--            android:textAllCaps="false"-->
        <!--            android:textColor="@color/blue"-->
        <!--            android:textStyle="italic"-->
        <!--            app:layout_constraintEnd_toEndOf="@id/textview_description"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/textview_description" />-->

        <ImageView
            android:id="@+id/imageview_food"
            android:layout_width="match_parent"
            android:layout_height="@dimen/food_ad_height"
            android:layout_marginTop="@dimen/s_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/signup_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_address" />

        <TextView
            android:id="@+id/textview_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/s_padding"
            android:layout_marginTop="@dimen/s_padding"
            android:text="Вес (в граммах): 150"
            android:textColor="@color/black"
            android:textSize="@dimen/sub_title_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageview_food" />

        <TextView
            android:id="@+id/textview_reserved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/s_padding"
            android:layout_marginTop="@dimen/s_padding"
            android:text="@string/reserved"
            android:textColor="@color/black"
            android:textSize="@dimen/sub_title_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_weight" />

        <View
            android:id="@+id/sep"
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_marginHorizontal="@dimen/s_padding"
            android:layout_marginVertical="@dimen/m_padding"
            android:background="#d6d6d6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_reserved" />

        <TextView
            android:id="@+id/textview_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/s_padding"
            android:layout_marginTop="@dimen/s_padding"
            android:drawablePadding="@dimen/text_space"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/sub_title_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sep"/>

        <Button
            android:id="@+id/refuse_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_padding"
            app:layout_constraintStart_toStartOf="@id/textview_owner"
            app:layout_constraintTop_toBottomOf="@id/textview_owner"
            android:background="@drawable/border"
            android:textAllCaps="false"
            android:padding="@dimen/s_padding"
            android:text="@string/refuse" />

        <Button
            android:id="@+id/received_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/s_padding"
            app:layout_constraintTop_toTopOf="@id/refuse_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/refuse_button"
            android:background="@drawable/border"
            android:textAllCaps="false"
            android:padding="@dimen/s_padding"
            android:text="@string/received" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
